Fix build job list alignment issue on wide views

--- a/app/styles/app/layouts/jobs.scss
+++ b/app/styles/app/layouts/jobs.scss
@@ -238,11 +238,11 @@
     }
 
     .job-env {
-      flex: 0 0 21em;
+      flex: 0 0 21.5em;
     }
 
     .job-lang {
-      flex: 0 0 21em;
+      flex: 0 0 21.5em;
     }
   }
 }
